o Cleaning up some IDEA warnings.
git-svn-id: https://svn.apache.org/repos/asf/maven/continuum/trunk@366256 13f79535-47bb-0310-9956-ffa450edef68